--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,9 @@ development:
   encoding: unicode
   database: stemcell_development
   pool: 5
-  username: stemcell
-  password:
+  username: <%= ENV['PSQL_USERNAME'] %>
+  password: <%= ENV['PSQL_PASSWORD'] %>
+  host: localhost
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -43,8 +44,9 @@ test:
   encoding: unicode
   database: stemcell_test
   pool: 5
-  username: stemcell
-  password:
+  username: <%= ENV['PSQL_USERNAME'] %>
+  password: <%= ENV['PSQL_PASSWORD'] %>
+  host: localhost
 
 production:
   adapter: postgresql
